feat:[TE-005] Setup JWT authentication with OAuth2 on server side